force-app/main/default/objects/APT_SAP_Contracts__c/APT_SAP_Contracts__c.object-meta.xml
<CustomObject>
    <description>Related List to contain all the SAP Contracts</description>
    <label>SAP Contract</label>
    <nameField>
        <displayFormat>SAP-SFNo-{YYYY}-{MM}-{0}</displayFormat>
        <label>SAP Contracts Auto ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SAP Contracts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>