force-app/main/default/objects/APT_SAP_Contracts__c/fields/APT_Domestic_Parcel_Category_Description__c.field-meta.xml
<CustomField>
    <fullName>APT_Domestic_Parcel_Category_Description__c</fullName>
    <label>Quote Category Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>