force-app/main/default/objects/APT_SAP_Contracts__c/fields/APT_Material_Material_Description__c.field-meta.xml
<CustomField>
    <fullName>APT_Material_Material_Description__c</fullName>
    <label>Material &amp; Material Description</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>