force-app/main/default/objects/APT_SAP_Contracts__c/fields/APT_SAP_Contract_Number_temp__c.field-meta.xml
<CustomField>
    <fullName>APT_SAP_Contract_Number_temp__c</fullName>
    <description>.</description>
    <label>SAP Contract Number temp</label>
    <length>25</length>
    <type>Text</type>
</CustomField>